--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,10 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+@font-face {
+  font-family: 'Munro';
+  src: url('@site/static/Munro.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
