--- a/src/components/SetupDetailsGenerator/index.module.css
+++ b/src/components/SetupDetailsGenerator/index.module.css
@@ -13,8 +13,11 @@
   grid-template-columns: repeat(3, [col] minmax(150px, auto));
   grid-template-rows: repeat(3, [row] minmax(30px, auto));
   gap: 5px;
-  border: 1px dotted #FFFFFF;
+  border: 5px dashed var(--ifm-menu-color-background-hover);
   padding: 15px;
+  font-family: 'Munro';
+  line-height: 75%;
+  font-size: 20px;
 }
 
 .general {
@@ -39,6 +42,7 @@
 .uploadSprite {
   grid-column: 2;
   grid-row: 1;
+  overflow: hidden;
 }
 .uploadSprite input {
   font-size: 20px;
