--- a/src/components/Dropdown/index.module.css
+++ b/src/components/Dropdown/index.module.css
@@ -7,7 +7,7 @@
 .header {
   border-radius: 0.5rem;
   border: none;
-  padding: 10px;
+  padding: 7.5px 10px;
   cursor: pointer;
 }
 .header:hover, .focused {
@@ -22,8 +22,8 @@
   border-radius: 0.5rem;
   border: none;
   position: relative;
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
+  flex-wrap: wrap;
   padding: 5px;
   gap: 5px;
   background: var(--ifm-menu-color-background-hover);
